# axum-sqlx-todo

./: .env  Cargo.toml  README.md  app_settings.toml  docker-compose.yaml
app/: Cargo.toml
app/src/: lib.rs  main.rs  settings.rs
app/src/routes/: lookup.rs  mod.rs  todo.rs  user.rs
docs/: about_project.md  about_rusty_todo.md  handle_authorization.md
domain/: Cargo.toml
domain/src/: lib.rs  password.rs
domain/src/models/: mod.rs  primitives.rs  todo.rs  user.rs
domain/src/repositories/: lookup.rs  mod.rs  todo.rs  token.rs  user.rs
infra/: Cargo.toml
infra/examples/: gen_hashed_password.rs
infra/src/: jwt.rs  lib.rs  password.rs  settings.rs
infra/src/http/: middleware.rs  mod.rs
infra/src/http/handler/: lookup.rs  mod.rs  todo.rs  user.rs
infra/src/postgres/repositories/: lookup.rs  mod.rs  todo.rs  user.rs
infra/src/redis/: token.rs
migrations/: 20250526052645_create-tasks-table.down.sql  20250526052645_create-tasks-table.up.sql
settings/: Cargo.toml
settings/src/: lib.rs
test_suite/: Cargo.toml  helpers.rs  lib.rs  lookup.rs  test_case.rs  todo.rs  user.rs
test_suite/fixtures/: test.sql
test_suite/tests/: helpers.rs  lib.rs
use_case/: Cargo.toml
use_case/src/: jwt.rs  lib.rs  lookup.rs  todo.rs  user.rs
utils/: Cargo.toml
utils/src/: serde.rs  time.rs
