
[workspace]
members = ["app", "domain", "infra"]
resolver = "3"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.8"
config = { version = "0.15", features = ["toml"] }
garde = { version = "0.22", features = ["derive", "email"] }
rstest = "0.25"
secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "tls-native-tls",
  "postgres",
  "macros",
  "derive",
  "uuid",
  "time",
] }
thiserror = "2"
time = { version = "0.3", features = ["serde", "macros"] }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4", "serde"] }
