
[workspace]
members = ["app", "domain", "infra", "test_suite", "use_case", "utils"]
resolver = "3"

[workspace.dependencies]
anyhow = "1"
argon2 = "0.5"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["cookie", "typed-header"] }
config = { version = "0.15", features = ["toml"] }
cookie = "0.18"
enum-display = "0.1"
deadpool-redis = "0.21"
fancy-regex = "0.14"
garde = { version = "0.22", features = ["derive", "email"] }
hmac = "0.12"
jwt = "0.16"
log = { version = "0.4", features = ["serde"] }
once_cell = "1"
password-hash = { version = "0.5", features = ["rand_core"] }
# rand = "0.9" depends on rand_core = "0.9"
# but password-hash = "0.5" depends on rand_core = "0.6"
# because rand = "0.8" depends on rand_core = "0.6",
# so we use rand = "0.8" here
rand = "0.8"
redis = "0.31"
rstest = "0.25"
secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
sha2 = "0.10"
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "tls-native-tls",
  "postgres",
  "macros",
  "derive",
  "uuid",
  "time",
] }
thiserror = "2"
time = { version = "0.3", features = ["serde", "formatting", "macros"] }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
