[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
axum.workspace = true
config.workspace = true
domain = { path = "../domain" }
infra = { path = "../infra" }
secrecy.workspace = true
serde.workspace = true
settings = { path = "../settings" }
sqlx.workspace = true
tokio.workspace = true
