[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
axum.workspace = true
deadpool-redis.workspace = true
domain = { path = "../domain" }
infra = { path = "../infra" }
log.workspace = true
secrecy.workspace = true
serde.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-bunyan-formatter.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true
