[package]
name = "infra"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
argon2.workspace = true
async-trait.workspace = true
axum.workspace = true
axum-extra.workspace = true
cookie.workspace = true
deadpool-redis.workspace = true
domain = { path = "../domain" }
hmac.workspace = true
jwt.workspace = true
password-hash.workspace = true
rand.workspace = true
redis.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
settings = { path = "../settings" }
sha2.workspace = true
sqlx.workspace = true
time.workspace = true
use_case = { path = "../use_case" }
uuid.workspace = true

[dev-dependencies]
anyhow.workspace = true
rstest.workspace = true
