[package]
name = "use_case"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
domain = { path = "../domain" }
hmac.workspace = true
jwt.workspace = true
secrecy.workspace = true
settings = { path = "../settings" }
sha2.workspace = true
time.workspace = true
uuid.workspace = true

[dev-dependencies]
anyhow.workspace = true
rstest.workspace = true
